--- a/code/services/templates/index.html
+++ b/code/services/templates/index.html
@@ -79,7 +79,7 @@
 
             <div id="aboutme">
                 <h1>
-                    Since the february of <span id="makeGold">2021</span>, <br> I have been a computer ccience <span id="makeGold">enthusiast</span>.
+                    Since the february of <span id="makeGold">2021</span>, <br> I have been a computer science <span id="makeGold">enthusiast</span>.
                 </h1>
                 <h1>
                     I have worked on <a href="./products"><h1><span id="makeGoldandButton">several projects</span></h1></a> and have experience <span id="makeGold">collaborating</span> with fellow developers.
