--- a/code/services/templates/projects.html
+++ b/code/services/templates/projects.html
@@ -58,7 +58,17 @@
                 </p>
             </div>
             
-
+            <div class="product" id="2022VIsions">
+                <div class="productHead">
+                    <div id="text">
+                        <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" id="mainProductButton"><h1>Rapid React Robot Vision pipeline</h1></a>
+                        <h1>FRC 2022</h1>
+                        <p>literal basketball</p>
+                    </div>
+                    <img src="https://pbs.twimg.com/profile_images/1350201636354977793/8etruElX_400x400.jpg" alt="me">
+                </div>
+                <br>
+            </div>
 
             <div class="product" id="bozuBot">
                 <div class="productHead">
@@ -72,6 +82,8 @@
                 <br>
             </div>
 
+
+            
             <div class="product" id="ballCatcher">
                 <div class="productHead">
                     <div id="text">
