--- a/code/services/static/styles/productsStyles.css
+++ b/code/services/static/styles/productsStyles.css
@@ -196,7 +196,7 @@ h1 {
 
 
 /* Slideshow container */
-.slideshow-container, .slideshow-container1 {
+.slideshow-container, .slideshow-container1, .slideshow-container2 {
     border-radius: 15px;
     margin: 0px 24%;
     width: 50%;
@@ -206,18 +206,18 @@ h1 {
 
   }
 
-.slideshow-container img, .slideshow-container1 img {
+.slideshow-container img, .slideshow-container1, .slideshow-container2 img {
     border-radius: 15px;
     max-width: 100%;
     max-height: 50%;
 }
   /* Hide the images by default */
-  .mySlides, .mySlides1 {
+  .mySlides, .mySlides1, .mySlides2 {
     display: flex;
   }
   
   /* Next & previous buttons */
-  .prev, .next , .prev1, .next1{
+  .prev, .next , .prev1, .next1, .prev2, .next2{
     cursor: pointer;
     position: absolute;
     top: 50%;
@@ -233,18 +233,18 @@ h1 {
   }
   
   /* Position the "next button" to the right */
-  .next, .next1 {
+  .next, .next1, .next2 {
     right: 0;
     border-radius: 3px 0 0 3px;
   }
   
   /* On hover, add a black background color with a little bit see-through */
-  .prev:hover, .next:hover , .next1:hover, .prev1:hover{
+  .prev:hover, .next:hover , .next1:hover, .prev1:hover, .next2:hover, .prev2:hover{
     background-color: rgba(0,0,0,0.8);
   }
   
   /* Caption text */
-  .text, .text1 {
+  .text, .text1, .text2 {
     color: #f2f2f2;
     background-color: #24252A;
     font-size: 15px;
@@ -257,7 +257,7 @@ h1 {
   }
   
   /* Number text (1/3 etc) */
-  .numbertext, .numbertext1 {
+  .numbertext, .numbertext1 , .numbertext2{
     color: #f2f2f2;
     font-size: 12px;
     padding: 8px 12px;
@@ -266,7 +266,7 @@ h1 {
   }
   
   /* The dots/bullets/indicators */
-  .dot, .dot1 {
+  .dot, .dot1, .dot2 {
     cursor: pointer;
     height: 15px;
     width: 15px;
@@ -277,12 +277,12 @@ h1 {
     transition: background-color 0.6s ease;
   }
   
-  .active, .dot:hover, .active1, .dot1:hover {
+  .active, .dot:hover, .active1, .dot1:hover ,  .active2, .dot2:hover {
     background-color: #ffffff;
   }
   
   /* Fading animation */
-  .fade, .fade1 {
+  .fade, .fade1, .fade2 {
     -webkit-animation-name: fade;
     -webkit-animation-duration: 1.5s;
     animation-name: fade;
