--- a/code/services/templates/inProgress.html
+++ b/code/services/templates/inProgress.html
@@ -57,15 +57,16 @@
                 </p>
             </div>
             
-
-            <div class="product" id="2022VIsions">
+            <div class="product" id="TeachX">
                 <div class="productHead">
                     <div id="text">
-                        <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" id="mainProductButton"><h1>Robot Vision pipeline</h1></a>
-                        <h1>FRC 2022</h1>
-                        <p>literal basketball</p>
+                        <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" id="mainProductButton"><h1>TeachX</h1></a>
+                        <h1>Alexa but harder better faster stronger (and smarter)</h1>
+                        <p>TeachX offers a learning solutions for anyone. On anything. TeachX scours the internet for the most reliable sources of information to ensure that taught lessons are accurate. Ask about any topic, and teachX will do what it does best: teach. It monitors your understanding with top of the line
+                            AI and also offers more traditional ways to guarantee proficiency in AI generated quizzes. You can also keep track of the progress of the students in your classroom. 
+                        </p>
                     </div>
-                    <img src="https://pbs.twimg.com/profile_images/1350201636354977793/8etruElX_400x400.jpg" alt="me">
+                    <img src="https://static.wixstatic.com/media/a8c221_4e1f5aa42d0b420f973891894b2bb07a~mv2.png/v1/fill/w_560,h_352,al_c,q_85,usm_0.66_1.00_0.01/a8c221_4e1f5aa42d0b420f973891894b2bb07a~mv2.webp" alt="me">
                 </div>
                 <br>
             </div>
