--- a/codeV2/services/templates/index.html
+++ b/codeV2/services/templates/index.html
@@ -9,23 +9,16 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='styles/indexStyles.css') }}">
-        <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">    
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.0.0/css/all.css. ">
         <link rel="icon" href="https://cdn.discordapp.com/avatars/643764774362021899/8ec6aecedaaffd552ab154d9c308b32f.webp?size=1024">
+        <script src="https://kit.fontawesome.com/1b4a129057.js" crossorigin="anonymous"></script>
     </head>
     <body>
         <div class="NavBar">
-            <p class="Home">
-                Home()
-            </p>
-            <p class="about">
-                me.About()
-            </p>
-            <p class="Contact">
-                me.Contact()
-            </p>
-            <p class="work">
-                me.Work()
-            </p>
+            <a href="#" class="btn">Home<span>()</span></a>
+            <a href="#AboutMe" class="btn"><span>me.</span>About<span>()</span></a>
+            <a href="" class="btn"><span>me.</span>Contact<span>()</span></a>
+            <a href="" class="btn"><span>me.</span>Work<span>()</span></a>
         </div>
 
         <div class="TitleBox">
@@ -34,20 +27,31 @@
                 &nbsp;&nbsp;&nbsp;&nbsp;<span class = "param">name</span> = <span class = "str">“Gene”</span>, <br>
                 &nbsp;&nbsp;&nbsp;&nbsp;<span class = "param">age</span> = <span class="int">15</span>, <br>
                 &nbsp;&nbsp;&nbsp;&nbsp;<span class = "param">values</span> = [ <br>
-                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span class = "str">“<a>Persistence</a>”</span>, <br>
-                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span class = "str">“<a>Prolificity</a>”</span>, <br>
-                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span class = "str">“<a>Pleasure</a>”</span> <br>
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="#Persistence"><span class = "str">"Persistence"</span></a>, <br>
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="#Prolificity"><span class = "str">"Prolificity"</span></a>, <br>
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="#Persistence"><span class = "str">"Pleasure"</span></a> <br>
                 &nbsp;&nbsp;&nbsp;&nbsp;] <br>
                 )
             </p>
         </div>
 
+        <div class="values" id="Persistence">
+            <div class="valueCircle">
+                <i class="fa-solid fa-dumbbell valueIcon fa-10x"></i>
+            </div>
+            <p class="valueTitle">
+                Persistence
+            </p>
+            <p class="valueText">
+                Its about drive.
+            </p>
+        </div>
 
-        <div class="AboutMe">
+        <div class="AboutMe" id="AboutMe">
             <div class = AboutMeContainer>
                 <div class="AboutMeText">
                     <h1>
-                        me.About()
+                        me.<span class="function">About</span>()
                     </h1>
                     <p>“””Since the February of 2021, 
                         I have been a computer science enthusiast. 
@@ -125,12 +129,43 @@
                 </div>
                 <div class="quote">
                     <p>
-                        <span class="quoteHead">me.Quote()</span> <br><br>
+                        <span class="quoteHead">me.<span class="function">Quote</span>()</span> <br><br>
                         &nbsp;&nbsp;&nbsp;&nbsp;<span class="quoteText">"This cheese would make a really good tiramisu."</span><br>
                         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span class="quoteFoot">-Gene, 2022</span>
                     </p>
                 </div>
             </div>
         </div>
+        <div class="values" id="Prolificity">
+            <div class="valueCircle">
+                <i class="fa-solid fa-lightbulb valueIcon fa-10x"></i>
+            </div>
+            <p class="valueTitle">
+                Prolificity
+            </p>
+            <p class="valueText">
+                Why would you be anything else?
+            </p>
+        </div>
+        <script type="text/javascript">
+            const btns = document.querySelectorAll(".btn");
+
+            btns.forEach((btn) => {
+            btn.addEventListener("mousemove", function(e){
+                const position = btn.getBoundingClientRect();
+                const x = e.pageX - position.left - position.width / 2;
+                const y = e.pageY - position.top - position.height / 2;
+        
+                btn.children[0].style.transform = "translate(" + x * 0.3 + "px, " + y * 0.5 + "px)";
+            });
+            });
+        
+            btns.forEach((btn) => {
+            btn.addEventListener("mouseout", function(e){
+                btn.children[0].style.transform = "translate(0px, 0px)";
+            });
+            });
+        </script>
     </body>
+    
 </html>
