--- a/codeV2/services/static/styles/indexStyles.css
+++ b/codeV2/services/static/styles/indexStyles.css
@@ -70,7 +70,7 @@ body {
     color: #ADFF00;
 
     text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-    transition: all 0.3s ease 0.1s;
+    transition: all 0.3s ease;
 
 }
 
