--- a/codeV2/services/static/styles/indexStyles.css
+++ b/codeV2/services/static/styles/indexStyles.css
@@ -199,7 +199,7 @@ color: #FFFFFF;
 
 .TitleBox .str {
     color: #FFE600;
-    transition: all 0.3s ease 0.1s;
+    transition: all 0.3s ease;
 }
 
 .TitleBox  a{
