--- a/codeV2/services/templates/index.html
+++ b/codeV2/services/templates/index.html
@@ -61,7 +61,7 @@
                 <div class="Info">
                     <div class="mainSkills">
                         <h3>
-                            Main skills
+                            Skillset
                         </h3>
                         <p>
                             Databases,<br>  
@@ -80,8 +80,6 @@
                             Tools
                         </h3>
                         <p>
-                            Tools
-
                             MongoDB,<br>  
                             HTML/CSS/JS,<br>  
                             Python,<br>  
@@ -102,25 +100,39 @@
                             Experience
                         </h3>
                         <p>
-
-                            Webapp developer
-                            and Cofounder
-                            @Pycalc X
+                            <span>Webapp developer and Cofounder</span> 
+                            @Pycalc X<br>
                             2021 - now <br><br>  
 
-                            Freelance
+                            <span>Freelance</span> <br>
                             2021 - now      <br><br>    
 
-                            Datascience Research project
-                            @CodeBozu
+                            <span>Datascience Research project</span> 
+                            @CodeBozu<br>
                             2021 <br><br>
                             
-                            Visions Member
-                            @Code Red
-                            2021 - now <br><br>
-                                    
+                            <span>Visions Member</span> 
+                            @Code Red<br>
+                            2021 - now <br><br>       
                         </p>
                     </div>
+                    <div class="Languages">
+                        <h3>
+                            Languages
+                        </h3>
+                        <p>
+
+                            <span>English</span> <br>
+                            2006 - now <br><br>  
+
+                            <span>Bahasa Indonesia</span> <br>
+                            2006 - now<br><br>    
+
+                            <span>Latin</span> <br>
+                            2020 - now <br><br>      
+                        </p>
+                    </div>
+
                 </div>
             </div>
             <div class="Visuals">
@@ -147,6 +159,185 @@
                 Why would you be anything else?
             </p>
         </div>
+
+        <div class="Work">
+            <div class= "WorkText">
+                <h1>
+                    me.<span class="function">Work</span>()
+                </h1>
+                <p>
+                    “””Products, Projects, Papers, and Future.”””
+                </p> 
+            </div>
+            <div class="Products">
+                <div class="ProductHeader">
+                    <p>
+                        <span class="subHeader">me.<span class="function">Products</span>()</span> <br>
+                        “””Larger scale products you can take advantage of in a few clicks.”””
+                    </p>
+                </div>
+                <div class="ProductCarousel">
+                    <div class="ProductTile">
+                        <a href="">
+                            <div class="ProductItem" id="Calcom">
+                                <img src="https://static.wixstatic.com/media/a8c221_e651c0f32307486191c3d5793870b8c3~mv2.png/v1/fill/w_646,h_406,al_c,lg_1,q_85/logo.webp" alt="Calcom">
+                                <h3>
+                                    Calcom
+                                </h3>
+                                <p>
+                                    "Your solution to computation."
+                                </p>
+                            </div>
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <div class="Projects">
+                <div class="ProjectHeader">
+                    <p>
+                        <span class="subHeader">me.<span class="function">Projects</span>()</span> <br>
+                        ”””Non marketable projects.”””
+                    </p>
+                </div>
+                <div class="ProjectCarousel">
+                    <div class="ProjectTile">
+                        <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">
+                            <div class="ProjectItem" id="CodeRedRoboticsVision">
+                                <img src="https://pbs.twimg.com/profile_images/1350201636354977793/8etruElX_400x400.jpg" alt="Calcom">
+                                <h3>
+                                    Rapid React Robot Vision
+                                </h3>
+                                <p>
+                                    "FRC 2022"
+                                </p>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="ProjectTile">
+                        <a href="http://codebozu.com/">
+                            <div class="ProjectItem" id="BozuBot">
+                                <img src="https://media-exp1.licdn.com/dms/image/C4D0BAQFmTZ4t_b7H8A/company-logo_200_200/0/1639364471276?e=2159024400&v=beta&t=tf8UFG64VrtNFu7wH-mLfuZX2Re0gH7cNt-TzuirvGs" alt="CodeBozu">
+                                <h3>
+                                    BozuBot
+                                </h3>
+                                <p>
+                                    "Insane Time Constraint"
+                                </p>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="ProjectTile">
+                        <a href="http://sentientplatypus.pythonanywhere.com/underConstruction">
+                            <div class="ProjectItem" id="ReflexTesting">
+                                <img src="https://www.vhv.rs/dpng/d/259-2592088_blue-circle-png-pictures-blue-eat-circle-transparent.png" alt="ReflexTesting">
+                                <h3>
+                                    Reflex Testing Game
+                                </h3>
+                                <p>
+                                    "Aimlabs but with a camera."
+                                </p>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="ProjectTile">
+                        <a href="https://github.com/Sleek-Snails/Snail-Snacks">
+                            <div class="ProjectItem" id="puzzles">
+                                <img src="https://hips.hearstapps.com/amv-prod-gp.s3.amazonaws.com/gearpatrol/wp-content/uploads/2020/04/How-To-Get-Better-At-Puzzles-gear-patrol-lead-feature-V2.jpg" alt="puzzles">
+                                <h3>
+                                    Puzzles
+                                </h3>
+                                <p>
+                                    "Discord code jam submission"
+                                </p>
+                            </div>
+                        </a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="Papers">
+                <div class="PaperHeader">
+                    <p>
+                        <span class="subHeader">me.<span class="function">Papers</span>()</span> <br>
+                        ”””Research papers, Documentation, etc.”””
+                    </p>
+                </div>
+                <div class="PaperCarousel">
+                    <div class="PaperTile">
+                        <a href="">
+                            <div class="PaperItem" id="CodeRedRoboticsVision">
+                                <img src="https://pbs.twimg.com/profile_images/1350201636354977793/8etruElX_400x400.jpg" alt="Calcom">
+                                <h3>
+                                    Rapid React Robot Vision
+                                </h3>
+                                <p>
+                                    "FRC 2022"
+                                </p>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="PaperTile">
+                        <a href="https://docs.google.com/document/d/1wopOZllNE47XJXkMYUnJH79BcgCRephUfpS8FBaqJrw/export?format=pdf">
+                            <div class="PaperItem" id="PresidentResearchProject">
+                                <img src="https://cdn.cnn.com/cnnnext/dam/assets/181105112842-donkey-elephant-top-full-169.jpg" alt="Politician Scraping">
+                                <h3>
+                                    Politician Scraping
+                                </h3>
+                                <p>
+                                    "Analysis of US Politician Data."
+                                </p>
+                            </div>
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <div class="InProgress">
+                <div class="InProgressHeader">
+                    <p>
+                        <span class="subHeader">me.<span class="function">InProgress</span>()</span> <br>
+                        ”””Masterpieces in the making.”””
+                    </p>
+                </div>
+                <div class="InProgressCarousel">
+                    <div class="InProgressTile">
+                        <a href="">
+                            <div class="InProgressItem" id="CodeRedRoboticsVision">
+                                <img src="https://pbs.twimg.com/profile_images/1350201636354977793/8etruElX_400x400.jpg" alt="Calcom">
+                                <h3>
+                                    Rapid React Robot Vision
+                                </h3>
+                                <p>
+                                    "FRC 2022"
+                                </p>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="InProgressTile">
+                        <a href="https://docs.google.com/document/d/1wopOZllNE47XJXkMYUnJH79BcgCRephUfpS8FBaqJrw/export?format=pdf">
+                            <div class="InProgressItem" id="PresidentResearchProject">
+                                <img src="https://cdn.cnn.com/cnnnext/dam/assets/181105112842-donkey-elephant-top-full-169.jpg" alt="Politician Scraping">
+                                <h3>
+                                    Politician Scraping
+                                </h3>
+                                <p>
+                                    "Analysis of US Politician Data."
+                                </p>
+                            </div>
+                        </a>
+                    </div>
+                </div>
+            </div>
+
+
+        </div>
+
+
+
+
+
+
+
+
         <script type="text/javascript">
             const btns = document.querySelectorAll(".btn");
 
