--- a/codeV2/services/templates/index.html
+++ b/codeV2/services/templates/index.html
@@ -178,7 +178,7 @@
                 </div>
                 <div class="ProductCarousel">
                     <div class="ProductTile">
-                        <a href="">
+                        <a href="pycalc.com">
                             <div class="ProductItem" id="Calcom">
                                 <img src="https://static.wixstatic.com/media/a8c221_e651c0f32307486191c3d5793870b8c3~mv2.png/v1/fill/w_646,h_406,al_c,lg_1,q_85/logo.webp" alt="Calcom">
                                 <h3>
@@ -190,6 +190,33 @@
                             </div>
                         </a>
                     </div>
+                    <div class="ProductTile">
+                        <a href="https://discord.com/api/oauth2/authorize?client_id=822265614244511754&permissions=8&scope=bot">
+                            <div class="ProductItem" id="Amoris">
+                                <img src="https://cdn.discordapp.com/avatars/822265614244511754/61cdc288c07c18e83082e538e5ca6671.webp?size=1024" alt="Amoris">
+                                <h3>
+                                    Amoris
+                                </h3>
+                                <p>
+                                    "What you've always wanted in a bot."
+                                </p>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="ProductTile">
+                        <a href="https://www.spigotmc.org/resources/lives-smp.96177/">
+                            <div class="ProductItem" id="Lives SMP">
+                                <img src="https://ih1.redbubble.net/image.927840418.5711/pp,840x830-pad,1000x1000,f8f8f8.jpg" alt="Lives SMP">
+                                <h3>
+                                    Lives SMP
+                                </h3>
+                                <p>
+                                    "MC Life system with lifesteal."
+                                </p>
+                            </div>
+                        </a>
+                    </div>
+
                 </div>
             </div>
             <div class="Projects">
@@ -300,27 +327,27 @@
                 </div>
                 <div class="InProgressCarousel">
                     <div class="InProgressTile">
-                        <a href="">
-                            <div class="InProgressItem" id="CodeRedRoboticsVision">
-                                <img src="https://pbs.twimg.com/profile_images/1350201636354977793/8etruElX_400x400.jpg" alt="Calcom">
+                        <a href="pycalc.com">
+                            <div class="InProgressItem" id="TeachX">
+                                <img src="https://static.wixstatic.com/media/a8c221_4e1f5aa42d0b420f973891894b2bb07a~mv2.png/v1/fill/w_560,h_352,al_c,q_85,usm_0.66_1.00_0.01/a8c221_4e1f5aa42d0b420f973891894b2bb07a~mv2.webp" alt="TeachX">
                                 <h3>
-                                    Rapid React Robot Vision
+                                    TeachX
                                 </h3>
                                 <p>
-                                    "FRC 2022"
+                                    "Alexa but better"
                                 </p>
                             </div>
                         </a>
                     </div>
                     <div class="InProgressTile">
-                        <a href="https://docs.google.com/document/d/1wopOZllNE47XJXkMYUnJH79BcgCRephUfpS8FBaqJrw/export?format=pdf">
-                            <div class="InProgressItem" id="PresidentResearchProject">
-                                <img src="https://cdn.cnn.com/cnnnext/dam/assets/181105112842-donkey-elephant-top-full-169.jpg" alt="Politician Scraping">
+                        <a href="#">
+                            <div class="InProgressItem" id="CombatPlus">
+                                <img src="https://static1.thegamerimages.com/wordpress/wp-content/uploads/2021/02/Minecraft-Combat-Tips-7.jpg?q=50&fit=crop&w=1400&dpr=1.5" alt="CombatPlus">
                                 <h3>
-                                    Politician Scraping
+                                    CombatPlus
                                 </h3>
                                 <p>
-                                    "Analysis of US Politician Data."
+                                    "Minecraft Combat just got better."
                                 </p>
                             </div>
                         </a>
