--- a/codeV2/services/static/styles/indexStyles.css
+++ b/codeV2/services/static/styles/indexStyles.css
@@ -7,8 +7,8 @@ html{
 
 body {
     position: relative;
-    width: 1440px;
-    height: 17583px;
+    width: 100%;
+    height: 100%;
     background: #272822;
 }
 
@@ -405,7 +405,7 @@ color: #FFFFFF;
 .Work {
     position: relative;
     width: 1203px;
-    height: 1379px;
+    height: 2100px;
     margin-left: 10em;
     margin-top: 30em;
 }
@@ -562,12 +562,20 @@ top: 3px;
     color: #FFFFFF;
 }
 
+#ProlificitySection
+{
+    width: 100%;
+}
+
+#PersistenceSection
+{
+    width: 100%;
+}
 
 
-
-
-
-
+#TitleBoxSection {
+    width: 100%;
+    background: linear-gradient(180deg, #272822 0%, rgba(1, 218, 248, 0.0333335) 99.99%, rgba(0, 224, 255, 0) 100%);}
 
 
 
