--- a/codeV2/services/static/styles/indexStyles.css
+++ b/codeV2/services/static/styles/indexStyles.css
@@ -105,7 +105,6 @@ body {
 .TitleBox {
     position: relative;
 
-    width: 1203px;
     height: 812px;
     margin-top: 6em;
     margin-left: calc(50% - 1203px/2 + 24.5px);
@@ -574,9 +573,7 @@ top: 3px;
 
 
 #TitleBoxSection {
-    width: 100%;
-    background: linear-gradient(180deg, #272822 0%, rgba(1, 218, 248, 0.0333335) 99.99%, rgba(0, 224, 255, 0) 100%);}
-
+}
 
 
 
